Translate pool water calculator to Portuguese

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
     <head>
         <meta charset="UTF-8">
-        <title>Pool Water Calculator</title>
+        <title>Calculadora de Água para Piscina</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
-            <h2>Pool Water Calculator</h2>
+            <h2>Calculadora de Água para Piscina</h2>
             <form id="poolForm">
-                <label for="length">Length (m):</label>
+                <label for="length">Comprimento (m):</label>
                 <input type="number" id="length" required>
 
-                <label for="width">Width (m):</label>
+                <label for="width">Largura (m):</label>
                 <input type="number" id="width" required>
 
-                <label for="depth">Depth (m):</label>
+                <label for="depth">Profundidade (m):</label>
                 <input type="number" id="depth" required>
 
-                <button type="submit">Calculate</button>
+                <button type="submit">Calcular</button>
             </form>
             <div id="result"></div>
         </div>
